create config file for each test case

--- a/config/servers_test2.yaml
+++ b/config/servers_test2.yaml
@@ -1,10 +1,14 @@
 #this is the config file for servers
 
+state_backup_folder: ../state_backup
+
 f: 2
 
 x: -1
 
-num_failed_primary: 2
+num_failed_primary: 1
+
+msg_drop_rate: 0
 
 servers_list:
    0:
